# sbbe

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  environment.yaml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build.yml  next_steps_citation_issue.md  next_steps_linting_issue.md
scripts/: paths.py
src/chemford/: BenfordMixture.py  __init__.py  benford_mixture.py  my_module.py
src/chemford/benford/: benford.py
src/chemford/data_processing/: benford_criteria.py  extract_significant_digit.py  rounding_in_log_space.py
src/chemford/distributions/: __init__.py  benford.py  make_benford.py  make_multinomial.py  make_multinomial_benford.py  make_multinomial_uniform.py  make_uniform.py  rounded_distributions.py
src/chemford/fetch/: chembl.py
src/chemford/plots/: multiplot_benford.py
src/chemford/simulation/: bioactivity_utils.py  distributions.py  estimate_mixture_ratio.py  sample_from_mixture.py  simulate_BF.py  simulate_mixture.py
src/chemford/statistics/: __init__.py  bayes_factor.py  edf_tests.py  specialized_statistics.py  utils.py  xi_squared.py
src/sbbe/: __init__.py  benford_mixture.py
src/sbbe/data_processing/: benford_criteria.py
src/sbbe/distributions/: __init__.py  make_multinomial_benford.py  make_multinomial_uniform.py
src/sbbe/fetch/: chembl.py
src/sbbe/simulation/: estimate_mixture_ratio.py  simulate_mixture.py
src/sbbe/statistics/: __init__.py  edf_tests.py  specialized_statistics.py
tests/: fetching_chembl.py  test_BenfordMixture.py  test_base_distributions.py  test_benford.py  test_chemford.py  test_data_processing.py  test_fetching_chembl.py  test_making_distributions.py  test_my_module.py  test_simulation.py  test_stats.py
