[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Matthias Welsch", email = "matthias.welsch@univie.ac.at" },
    { name = "Uday Abu Shehab", email = "uday.abu.shehab@univie.ac.at" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.2.5",
    "tqdm>=4.67.1",
    "pandas>=2.2.3",
    "notebook>=7.4.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2"
]
description = "Utilizing Benford's law to spot inconsistencies in bioactivity data"
keywords = ["Benford's law"," IC50"," bioactivity"]
license = {file = "LICENSE"}
name = "chemford"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
qa = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.10",
    "pytest>=8.3.5",
]

[project.optional-dependencies]
dev = [
    "build",  # build is not only used in publishing (below), but also in the template's test suite
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "myst_parser",
]
publishing = [
    "build",
    "twine",
    "wheel",
]

[project.urls]
Repository = "https://github.com/MatthiasWel/chemford"
Issues = "https://github.com/MatthiasWel/chemford/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.coverage.run]
branch = true
source = ["src/chemford"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,py312
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""

[tool.ruff]
line-length = 88
output-format = "concise"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
select = ["ALL"]
ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    "N806", # Variable contains upper case char
    "N802", # Function name contains upper case char
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

# https://github.com/astral-sh/ruff/issues/6474
"tests/*" = [  # /* ensures it works for all subdirectories
    "INP001",  # "implicit namespace package" is invalid for pytest
]

[tool.ruff.lint.isort]
known-first-party = ["chemford"]
force-single-line = true
no-lines-before = ["future","standard-library","third-party","first-party","local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/chemford/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
